// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/GraphNodeInputLabel.vue snapshot BOOLEAN 1`] = `
<g>
  <text
    dominant-baseline="middle"
    fill="#000"
    font-size="14"
  >
    value (true)
  </text>
  <!--v-if-->
</g>
`;

exports[`src/components/elements/GraphNodeInputLabel.vue snapshot COLOR 1`] = `
<g>
  <text
    dominant-baseline="middle"
    fill="#000"
    font-size="14"
  >
    value
  </text>
  <rect
    fill="rgba(0,0,0,1)"
    height="12"
    width="12"
    x="6"
    y="-6"
  />
</g>
`;

exports[`src/components/elements/GraphNodeInputLabel.vue snapshot D 1`] = `
<g>
  <text
    dominant-baseline="middle"
    fill="#000"
    font-size="14"
  >
    value (M1,2 L..)
  </text>
  <!--v-if-->
</g>
`;

exports[`src/components/elements/GraphNodeInputLabel.vue snapshot SCALER 1`] = `
<g>
  <text
    dominant-baseline="middle"
    fill="#000"
    font-size="14"
  >
    value (123456..)
  </text>
  <!--v-if-->
</g>
`;

exports[`src/components/elements/GraphNodeInputLabel.vue snapshot VECTOR2 1`] = `
<g>
  <text
    dominant-baseline="middle"
    fill="#000"
    font-size="14"
  >
    value (5555.., 8888..)
  </text>
  <!--v-if-->
</g>
`;

exports[`src/components/elements/GraphNodeInputLabel.vue snapshot connected 1`] = `
<g>
  <text
    dominant-baseline="middle"
    fill="#000"
    font-size="14"
  >
    value
  </text>
  <!--v-if-->
</g>
`;
